fix scrollbar

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -18,15 +18,16 @@ body {
   overflow-y: hidden;
   margin: auto;
   display: flex;
+  padding: 0 110px;
 }
 
 #body > .container {
   height: 100%;
   overflow-y: auto;
   overflow-x: hidden;
-  width: 80%;
+  width: 70%;
 }
 
-#body > .container > div {
-  /* margin: auto !important; */
+#scrollbar::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
 }
